--- a/New/nedex.html
+++ b/New/nedex.html
@@ -27,7 +27,6 @@
 <h3 class="user_details_11">Brian D. Copsey, MAcc, CFA, CPA (Inactive)<strong>Chief Financial Officer</strong></h3>
 <h3 class="user_details_12">Scott M. Simmons, JD, LL.M.<strong>Managing Director &amp; Family Office Fellow</strong></h3>
 <h3 class="user_details_13">Robert M. Twitchell, MBA, CFA<strong>Managing Director</strong></h3>
-<h3 class="user_details_14">Charles R. Carter, CFP<sup>®</sup>, CEPA<strong>Managing Director</strong></h3>
 </div>
 <div id="slide_3" class="director_details year_2020">
 <h3 class="user_details_1">H. Tyler Rosser, JD, CFP<sup>®</sup><strong>Managing Director</strong></h3>
@@ -55,4 +54,5 @@
 <h3 class="user_details_7">Kathleen K. Gadus, CPA<strong>Controller</strong></h3>
 <h3 class="user_details_8">Missy A. Reichert, CFP<sup>®</sup><strong>Senior Director, Client Service</strong></h3>
 <h3 class="user_details_9">M. Breeze Krumm, CAMS<sup>®</sup><strong>Chief Compliance Officer</strong></h3>
+<h3 class="user_details_10">Person Name<sup>®</sup><strong>Chief Compliance Officer</strong></h3>
 </div>
